add support for relative paths in url parameters